Adição do QUIZ de TLOU1

--- a/site/public/Noticias/noticia.css
+++ b/site/public/Noticias/noticia.css
@@ -614,7 +614,7 @@ body {
     margin-left: -5%;
     z-index: -1;
     height: 8vh;
-    background-color: #493B33;
+    background-color: #354534;
     justify-content: center;
     align-items: center;
 }
