--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -55,7 +55,7 @@ body {
     height: 15%;
     background-color: #FDC706;
     left: 50.5%;
-    top: 8%;
+    top: 6.5%;
     border-radius: 6px;
     flex-direction: column;
 }
@@ -65,6 +65,7 @@ body {
     #menuflutuanteJogos {
         width: 15%;
         height: 20%;
+        top: 8%;
     }
 }
 
@@ -475,7 +476,7 @@ body {
     display: flex;
     width: 100%;
     height: 8vh;
-    background-color: #7A6E44;
+    background-color: #354534;
     justify-content: center;
     align-items: center;
 }
@@ -499,7 +500,7 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 30px;
-    background-color: #7A6E44;
+    background-color: #354534;
     cursor: pointer;
 }
 
