--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -54,10 +54,11 @@ body {
     width: 14%;
     height: 15%;
     background-color: #FDC706;
-    left: 50.5%;
+    left: 47%;
     top: 6.5%;
     border-radius: 6px;
     flex-direction: column;
+  
 }
 
 
@@ -311,11 +312,17 @@ body {
     height: 30%;
     flex-direction: column;
     justify-content: center;
+    cursor: pointer;
 }
 
 #homepagetexto {
     display: flex;
-    color: #ffe70c;
+    color: white;
+}
+
+
+#homepagetexto:hover {
+    color: #FDC706;
 }
 
 /*NOTICIAS*/
