--- a/site/public/PaginaTLOU1/tlou1.css
+++ b/site/public/PaginaTLOU1/tlou1.css
@@ -61,7 +61,7 @@ body {
     width: 14%;
     height: 15%;
     background-color: #FDC706;
-    left: 50.5%;
+    left: 47%;
     top: 6.5%;
     border-radius: 6px;
     flex-direction: column;
@@ -709,6 +709,7 @@ body {
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    position: relative;
 }
 
 #parteCimaQuiz{
@@ -838,4 +839,44 @@ body {
     font-family: 'Space Grotesk';
     font-size: 0.8vmax;
     text-align: center;
+}
+
+/* BLUR QUIZ */
+.blurQuiz {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: rgba(182, 182, 182, 0.41);
+    backdrop-filter: blur(5px);
+    flex-direction: column;
+}
+
+#blurAviso{
+    display: flex;
+    width: 100%;
+    height: 5%;
+    margin-top: 15%;
+    justify-content: center;
+    color: white;
+    font-family: 'Space Grotesk';
+    font-weight: 700;
+    font-size: 1.7vmax;
+}
+
+#blurBotao{
+    display: flex;
+    background-color: #FDC706;
+    justify-content: center;
+    width: 10%;
+    height: 7%;
+    margin-top: 2%;
+    margin-left: 45%;
+    align-items: center;
+    color: white;
+    font-weight: 700;
+    font-family: 'Space Grotesk';
+    border-radius: 15px;
+    cursor: pointer;
 }
