--- a/site/public/PaginaTLOU1/tlou1header.css
+++ b/site/public/PaginaTLOU1/tlou1header.css
@@ -27,13 +27,13 @@
     display: flex;
     width: 100%;
     height: 100%;
-    margin-right: 5%;
+
 }
 
 #textonavbar {
     display: flex;
     align-items: center;
-    width: 90%;
+    min-width: 85%;
     height: 100%;
     justify-content: center;
     font-family: 'Space Grotesk', sans-serif;
@@ -43,6 +43,7 @@
     white-space: nowrap;
     font-weight: 600;
     gap: 5%;
+    text-align: center;
 }
 
 .a {
@@ -52,8 +53,10 @@
 /* HOMEPAGE */
 .homepage {
     display: flex;
-    height: 30%;
+    height: 100%;
+    justify-content: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 #homepagetexto {
@@ -133,4 +136,86 @@
     width: 10%;
     align-items: center;
     font-size: 18px;
+}
+
+/* Faça Login */
+.logincadastro {
+    display: flex;
+    min-width: 15%;
+    margin-right: 40%;
+    height: 100%;
+    align-items: center;
+}
+
+.login {
+    display: none;
+    height: 30%;
+    width: 50%;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #FDC706;
+    font-family: 'Space Grotesk', sans-serif;
+    cursor: pointer;
+
+}
+
+#logintexto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 300;
+}
+
+/* Cadastro */
+.cadastrar {
+    display: none;
+    height: 30%;
+    width: 60%;
+    justify-content: center;
+    box-sizing: border-box;
+    font-family: 'Space Grotesk', sans-serif;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 1%;
+}
+
+#naoTem {
+    display: flex;
+    color: #FDC706;
+    font-size: 0.5vmax;
+    justify-content: center;
+    font-weight: 500;
+}
+
+#cadastrartexto {
+    display: flex;
+    color: white;
+    font-size: 0.8vmax;
+    font-weight: 700;
+    margin-top: -4%;
+    cursor: pointer;
+
+}
+
+/* QUANDO ESTIVER LOGADO: */
+.conta {
+    display: flex;
+    height: 30%;
+    width: 50%;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #FDC706;
+    font-family: 'Space Grotesk', sans-serif;
+    cursor: pointer;
+}
+
+#contatexto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 300;
 }
