--- a/site/public/PaginaInicial/tlouhbo.css
+++ b/site/public/PaginaInicial/tlouhbo.css
@@ -143,6 +143,12 @@
     background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.123) 60%);
 }
 
+@media (max-width: 1919px){
+    .blocoEpisodiosGradienteTLOUHBO{
+        top: 488%;
+    }
+}
+
 .blocoEpisodiosGradienteTLOUHBO:hover {
     animation-name: historiaA;
     animation-duration: 1s;
