--- a/site/public/PaginaTLOU1/tlou1header.css
+++ b/site/public/PaginaTLOU1/tlou1header.css
@@ -219,3 +219,23 @@
     color: white;
     font-weight: 300;
 }
+
+
+/* SCROLL BAR */
+body::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: transparent;
+    /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #FDC706;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+
+}
