--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -226,6 +226,8 @@ body {
     font-family: 'Space Grotesk', sans-serif;
     font-size: 0.9vmax;
     line-height: 19px;
+    margin-left: 7%;
+    
     letter-spacing: 0px;
     white-space: nowrap;
     font-weight: 600;
@@ -237,6 +239,10 @@ body {
     #textonavbarInfinito {
         font-size: 1.2vmax;
     }
+}
+
+#serietextoInfinito{
+    color: white;
 }
 
 /* Header Normal */
@@ -345,7 +351,7 @@ body {
     #menuflutuanteJogos {
         width: 15%;
         height: 20%;
-        top: 8%;
+        top: 6.3%;
     }
 }
 
