--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -186,13 +186,6 @@ body {
         font-size: 1vmax;
     }
 }
-
-
-
-
-
-
-
 .container {
     height: 100vh;
     width: 90vw;
@@ -204,41 +197,49 @@ body {
     display: none;
     position: fixed;
     width: 100vw;
-    height: 6.5vh;
+    height: 7.5vh;
     background-color: #fc9802ee;
+    justify-content: center;
+    align-items: center;
 }
 
 .headerinfinita {
     display: flex;
-    width: 90vw;
-    height: 7.5vh;
+    width: 85vw;
+    height: 100%;
     align-items: center;
     justify-content: center;
-    margin-left: 5%;
+}
+
+.navbarInfinito{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 
 #textonavbarInfinito {
     display: flex;
     align-items: center;
-    width: 85%;
+    min-width: 85%;
     height: 100%;
     justify-content: center;
     font-family: 'Space Grotesk', sans-serif;
     font-size: 0.9vmax;
     line-height: 19px;
-    margin-left: 7%;
-    
     letter-spacing: 0px;
     white-space: nowrap;
     font-weight: 600;
     gap: 5%;
-
 }
 
 @media (max-width: 1919px) {
     #textonavbarInfinito {
         font-size: 1.2vmax;
     }
+}
+#homepagetextoInfinito{
+    color: white;
 }
 
 #serietextoInfinito{
@@ -274,15 +275,13 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    margin-right: 5%;
     align-items: center;
 }
 
 #textonavbar {
     display: flex;
     align-items: center;
-    width: 100%;
-    margin-left: 7%;
+    width: 85%;
     height: 100%;
     justify-content: center;
     font-family: 'Space Grotesk', sans-serif;
