--- a/site/public/PaginaTLOU1/tlou1header.css
+++ b/site/public/PaginaTLOU1/tlou1header.css
@@ -27,7 +27,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-
+    align-items: center;
 }
 
 #textonavbar {
@@ -44,10 +44,6 @@
     font-weight: 600;
     gap: 5%;
     text-align: center;
-}
-
-.a {
-    margin-top: 20%;
 }
 
 /* HOMEPAGE */
@@ -139,25 +135,16 @@
 }
 
 /* Faça Login */
-.logincadastro {
-    display: flex;
-    min-width: 15%;
-    margin-right: 40%;
-    height: 100%;
-    align-items: center;
-}
-
 .login {
     display: none;
     height: 30%;
-    width: 50%;
+    width: 7%;
     justify-content: center;
     box-sizing: border-box;
     border-radius: 5px;
-    background-color: #FDC706;
+    background-color: #fdc706;
     font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
-
 }
 
 #logintexto {
@@ -172,7 +159,7 @@
 .cadastrar {
     display: none;
     height: 30%;
-    width: 60%;
+    width: 9%;
     justify-content: center;
     box-sizing: border-box;
     font-family: 'Space Grotesk', sans-serif;
@@ -183,7 +170,7 @@
 
 #naoTem {
     display: flex;
-    color: #FDC706;
+    color: #FDC706A6;
     font-size: 0.5vmax;
     justify-content: center;
     font-weight: 500;
@@ -200,24 +187,25 @@
 }
 
 /* QUANDO ESTIVER LOGADO: */
-.conta {
-    display: flex;
-    height: 30%;
-    width: 50%;
+.idUsuario{
+    display: none;
+    height: 40%;
+    width: 10%;
+    align-items: center;
     justify-content: center;
-    box-sizing: border-box;
-    border-radius: 5px;
-    background-color: #FDC706;
-    font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
 }
 
-#contatexto {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#idUsuarioTexto{
+    font-size: 1.2vmax;
+    font-family: 'Space Grotesk', sans-serif;
     color: white;
-    font-weight: 300;
+}
+
+
+#iconUsuario{
+    color: white;
+    cursor: pointer;
 }
 
 
