--- a/site/public/PaginaTLOUHBO/hbo.css
+++ b/site/public/PaginaTLOUHBO/hbo.css
@@ -81,15 +81,13 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    margin-right: 5%;
     align-items: center;
 }
 
 #textonavbar {
     display: flex;
     align-items: center;
-    width: 100%;
-    margin-left: 7%;
+    min-width: 85%;
     height: 100%;
     justify-content: center;
     font-family: 'Space Grotesk', sans-serif;
@@ -375,26 +373,26 @@ body {
 }
 
 /* QUANDO ESTIVER LOGADO: */
-.conta {
-    display: flex;
-    height: 30%;
-    width: 7%;
+.idUsuario{
+    display: none;
+    height: 40%;
+    width: 10%;
+    align-items: center;
     justify-content: center;
-    box-sizing: border-box;
-    border-radius: 5px;
-    background-color: #493B33;
-    font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
 }
 
-#contatexto {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#idUsuarioTexto{
+    font-size: 1.2vmax;
+    font-family: 'Space Grotesk', sans-serif;
     color: white;
-    font-weight: 300;
 }
 
+
+#iconUsuario{
+    color: white;
+    cursor: pointer;
+}
 
 /* TITULO */
 .tituloJogo {
