--- a/site/public/PaginaTLOUHBO/hbo.css
+++ b/site/public/PaginaTLOUHBO/hbo.css
@@ -704,6 +704,31 @@ body {
     line-height: 35px;
 }
 
+.curtida{
+    display: flex;
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    top: 90%;
+    left: 78%;
+}
+
+#curtidaIcon{
+    color: #ffffff;
+    font-size: 1.8vmax;
+    cursor: pointer;
+}
+
+#curtidaTexto{
+    display: flex;
+    color: white;
+    font-family: 'Space Grotesk', sans-serif;
+    width: 80%;
+    height: 50%;
+    margin-left: 2%;
+    align-items: center;
+}
+
 #irCima {
     display: none;
     position: fixed;
@@ -724,6 +749,69 @@ body {
     font-size: 1.7vmax;
 }
 
+.ranking{
+    display: flex;
+    background-color: #31373C;
+    width: 100%;
+    height: 100%;
+    font-family: 'Space Grotesk', sans-serif;
+    flex-direction: column;
+    align-items: center;
+}
+
+#tituloRanking{
+    display: flex;
+    color: #899763;
+    width: 100%;
+    justify-content: center;
+    margin-top: 2%;
+    font-size: 1.4vmax;
+    font-weight: 700;
+}
+
+.rankingConteudo{
+    display: flex;
+    background-color: #222629;
+    width: 80%;
+    height: 85%;
+    margin-top: 2%;
+    border-radius: 5px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.rankingPosicao{
+    display: flex;
+    background-color: #31373C;
+    width: 90%;
+    height: 15%;
+    border-radius: 5px;
+    align-items: center;
+    margin-top: 2.2%;
+}
+
+#posicao{
+    color: white;
+    font-size: 1.5vmax;
+    margin-left: 2%;
+
+}
+
+#imagemPosicao{
+    display: flex;
+    background-image: url(./assets/last-of-us-review-episode-1-1920x1024.jpg);
+    width: 10%;
+    height: 90%;
+    border-radius: 5px;
+    margin-left: 3%;
+    background-size: cover;
+}
+
+#textoPosicao{
+    color: white;
+    font-size: 1.5vmax;
+    margin-left: 2%;
+}
 .footer {
     display: flex;
     position: absolute;
